<package format="3">
  <name>min_22_pkg</name>
  <version>0.1.0</version>
  <description>

     description

  </description>
  <maintainer email="jmsm1378@naver.com">min</maintainer>
  <author>min</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>


<!--
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
